-font family name correction -removed horizontal scrollbar for bestsellers

--- a/styles/components/magazine.css
+++ b/styles/components/magazine.css
@@ -11,7 +11,7 @@
 }
 
 #magazine h2 {
-  font-family: Good Times, Helvetica, Arial, sans-serif;
+  font-family: Good-Times, Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: bold;
   font-size: 2.3rem;
@@ -60,7 +60,7 @@
   min-height: 355px;
 }
 
-#magazine article a{
+#magazine article a {
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -93,5 +93,4 @@
   #magazine h2 {
     font-size: 3rem;
   }
-
 }
